// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabNav /> Render must match inactive() 1`] = `
<div>
  <div
    class="tabnav tabnav-inactive"
  >
    <nav
      aria-label="Foo bar"
      class="tabnav-tabs"
    >
      <a
        aria-current="page"
        class="tabnav-tab"
        href="#url"
      >
        Foo tab
      </a>
      <a
        class="tabnav-tab"
        href="#url"
      >
        Bar tab
      </a>
    </nav>
  </div>
</div>
`;

exports[`<TabNav /> Render must match regular() 1`] = `
<div>
  <div
    class="tabnav"
  >
    <nav
      aria-label="Foo bar"
      class="tabnav-tabs"
    >
      <a
        aria-current="page"
        class="tabnav-tab"
        href="#url"
      >
        Foo tab
      </a>
      <a
        class="tabnav-tab"
        href="#url"
      >
        Bar tab
      </a>
    </nav>
  </div>
</div>
`;

exports[`<TabNav /> Render must match withButtonActions() 1`] = `
<div>
  <div
    class="tabnav"
  >
    <a
      class="btn btn-sm float-right"
      href="#url"
      role="button"
    >
      Button
    </a>
    <nav
      aria-label="Foo bar"
      class="tabnav-tabs"
    >
      <a
        aria-current="page"
        class="tabnav-tab"
        href="#url"
      >
        Foo tab
      </a>
      <a
        class="tabnav-tab"
        href="#url"
      >
        Bar tab
      </a>
    </nav>
  </div>
</div>
`;

exports[`<TabNav /> Render must match withLinkActions() 1`] = `
<div>
  <div
    class="tabnav"
  >
    <div
      class="float-right"
    >
      <a
        class="tabnav-extra"
        href="#url"
      >
        Tabnav extra link
      </a>
      <a
        class="tabnav-extra"
        href="#url"
      >
        Tabnav extra link
      </a>
    </div>
    <nav
      aria-label="Foo bar"
      class="tabnav-tabs"
    >
      <a
        aria-current="page"
        class="tabnav-tab"
        href="#url"
      >
        Foo tab
      </a>
      <a
        class="tabnav-tab"
        href="#url"
      >
        Bar tab
      </a>
    </nav>
  </div>
</div>
`;

exports[`<TabNav /> Render must match withTextActions() 1`] = `
<div>
  <div
    class="tabnav"
  >
    <div
      class="tabnav-extra float-right"
    >
      Tabnav widget text here.
    </div>
    <nav
      aria-label="Foo bar"
      class="tabnav-tabs"
    >
      <a
        aria-current="page"
        class="tabnav-tab"
        href="#url"
      >
        Foo tab
      </a>
      <a
        class="tabnav-tab"
        href="#url"
      >
        Bar tab
      </a>
    </nav>
  </div>
</div>
`;
